update snap